# nfs-ml-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  model_forward.yaml  model_inverse.yaml  train.yaml
docs/: 01_install.md  02_data_spec.md  03_train_guide.md  04_predict_export_to_cst.md  05_delivery_checklist.md
scripts/: run_predict_inverse.bat  run_predict_inverse.sh  run_train_inverse.bat  run_train_inverse.sh
src/nfs_ml/: cli.py
src/nfs_ml/data/: build_dataset.py  split.py
src/nfs_ml/data/legacy/: gen_h_source_dataset.py
src/nfs_ml/infer/: export_cst.py  predict.py
src/nfs_ml/io/: dataset_npz.py  paths.py  scalers.py
src/nfs_ml/models/: mlp.py  registry.py
src/nfs_ml/train/: losses.py  metrics.py  trainer.py
src/nfs_ml/viz/: plots.py
